syntax = "proto3";

package squareup.cash.pranadb.clustermsgs.v1;

option go_package = "github.com/squareup/pranadb/protos/squareup/cash/pranadb/v1/clustermsgs";

message DDLStatementInfo {
  int64 originating_node_id = 1;
  int64 command_id = 2;
  int32 phase = 3;
  int32 command_type = 4;
  string schema_name = 5;
  string sql = 6;
  repeated uint64 table_sequences = 7;
  bytes extra_data = 8;
}

message DDLCancelMessage {
  int64 originating_node_id = 1;
  string schema_name = 2;
  int64 command_id = 3;
}

message ReloadProtobuf {
}

message ClusterProposeRequest {
  int64 shard_id = 1;
  bytes request_body = 2;
}

message ClusterProposeResponse {
  int64 ret_val = 1;
  bytes response_body = 2;
}

message ClusterForwardWriteRequest {
  int64 shard_id = 1;
  bytes request_body = 2;
}

message ClusterForwardWriteResponse {
}

message ClusterReadRequest {
  int64 shard_id = 1;
  bytes request_body = 2;
}

message ClusterReadResponse {
  bytes response_body = 1;
}

message SourceSetMaxIngestRate {
  string schema_name = 1;
  string source_name = 2;
  int64 rate = 3;
}

message LeaderInfosMessage {
  repeated LeaderInfo leader_infos = 1;
}

message LeaderInfo {
  int64 shard_id = 1;
  int64 node_id = 2;
}

message RemotingTestMessage {
  string some_field = 1;
}

// Cluster Manager messages

message NodeStartedMessage {
  string cluster_name = 1;
  int64 cluster_id = 2;
  int32 node_id = 3;
  int32 num_nodes = 4;
  int32 num_groups = 5;
  int32 min_replicas = 6;
  int32 max_replicas = 7;
  int32 window_size_ticks = 8;
  int32 min_ticks_in_window = 9;
}

message NodeStoppedMessage {
  string cluster_name = 1;
  int32 node_id = 2;
}

message GetClusterStateMessage {
  string cluster_name = 1;
  int32 node_id = 2;
  int64 version = 3;
}

message GetClusterStateResponse {
  bytes payload = 1;
}

message ClockTickMessage {
  string cluster_name = 1;
}

message SetLeaderMessage {
  int32 node_id = 1;
  int64 term = 2;
}